# locc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
inc/: argument_parser.h  file_util.h  logging.h  string_util.h
src/: argument_parser.c  file_util.c  logging.c  main.c  string_util.c
